--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Grinch's Code</title>
+
+    <script src="https://kit.fontawesome.com/3279f0431e.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
